<resources>
    <string name="app_name">Lab01</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">checkbox is selected</string>
    <string name="Button">Click Here</string>
    <string name="TextView">Look at my GUI</string>

    <string name="GUI">Look at my GUI:</string>

    <string name="check">Check this out!</string>
    <string name="Switch">Switch on / off</string>
    <string name="hint">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="on">the switch is on now</string>
    <string name="off">the switch is off now</string>
    <string name="check1">checkbox is selected</string>
    <string name="check2">checkbox is selected</string>

    <!--Lab3-->
    <string name="email">Enter you email address:</string>
    <string name="temail">Type email here</string>
    <string name="pass">Type your password:</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="hname">Enter your name</string>
    <string name="yemail">Your email:</string>
    <string name="eemail">Enter your email</string>
    <string name="pic">your picture:</string>
    <string name="click">Click the button above to take a picture</string>
    <string name="Button1">login</string>


    <string name="Lab3TextView1">Enter your email address:</string>
    <string name="Lab3TextView2">Enter your password:</string>
    <string name="Lab3EmailHint">Type email here:</string>
    <string name="Lab3LoginBtnText">Login</string>
    <string name="ProfileText">Your profile</string>
    <string name="NameText">Your name:</string>
    <string name="NameHintText">Enter your name</string>
    <string name="EmailTextViewText">Your email:</string>
    <string name="EmailHintText">Enter your email</string>
    <string name="PictureTextView">Your picture:</string>
    <string name="ImagePictureTextView">Click the button above to take a picture</string>
    <string name="GoToChatText">Go To Chat</string>
    <string name="SendText">Send</string>
    <string name="ReceiveText">Receive</string>
    <string name="ChatHint">Type here</string>

    <string name="type_here">type here</string>
    <string name="goToToolbar">Go To Toolbar</string>
    <string name="newMessageTV">What is your new message?</string>
    <string name="item1Toast">You clicked on the overflow menu</string>
    <string name="item3Toast">This is the initial message</string>

    //lab7
    <string name="GoToWeather">Go to Weather page</string>
    <string name="currentTemp">Current Temperature</string>
    <string name="minTemp">Minimum Temperature</string>
    <string name="maxTemp">Maximum Temperature</string>
    <string name="uvRating">UV</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
