<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gridlayout"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_columnSpan="2"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:textSize="30dp"
        android:text="@string/GUI" />

    <Button
        android:id="@+id/button"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="fill_horizontal"
        android:text="@string/Button"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:contentDescription="TODO"

        android:src="@drawable/flag" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:gravity="fill"
        android:text="@string/check" />

    <Switch
        android:id="@+id/switch1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:gravity="fill"
        android:text="@string/Switch" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"

        android:hint="@string/hint"
        android:inputType="textPersonName" />

</GridLayout>