<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="fill"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp">


    <Button

        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button1"
        android:textSize="20dp" />

    <EditText

        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="20dp"

        />


    <EditText

        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/temail"
        android:inputType="textEmailAddress"
        android:textSize="20dp" />


    <TextView
        android:id="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:text="@string/email"
        android:textSize="20dp" />

    <TextView

        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textSize="20dp" />

</LinearLayout>