<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="fill"
        android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp">

        <TextView
            android:nextFocusLeft="@+id/item4"
            android:nextFocusRight="@+id/item3"
            android:nextFocusUp="@+id/item2"
            android:nextFocusDown="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="17.5dp" />

        <TextView
            android:nextFocusLeft="@+id/item4"
            android:nextFocusRight="@+id/item3"
            android:nextFocusUp="@+id/item2"
            android:nextFocusDown="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="17.5dp" />

        <EditText
            android:nextFocusLeft="@+id/item4"
            android:nextFocusRight="@+id/item3"
            android:nextFocusUp="@+id/item2"
            android:nextFocusDown="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hname"
            android:textSize="20sp"

            />

        <TextView
            android:nextFocusLeft="@+id/item4"
            android:nextFocusRight="@+id/item3"
            android:nextFocusUp="@+id/item2"
            android:nextFocusDown="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yemail"
            android:textSize="17.5dp" />

        <EditText
            android:nextFocusLeft="@+id/item4"
            android:nextFocusRight="@+id/item3"
            android:nextFocusUp="@+id/item2"
            android:nextFocusDown="@+id/item1"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eemail"
            android:textSize="20sp"

            />

        <TextView
            android:nextFocusLeft="@+id/item4"
            android:nextFocusRight="@+id/item3"
            android:nextFocusUp="@+id/item2"
            android:nextFocusDown="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pic"
            android:textSize="17.5dp" />

        <ImageButton
            android:nextFocusLeft="@+id/item4"
            android:nextFocusRight="@+id/item3"
            android:nextFocusUp="@+id/item2"
            android:nextFocusDown="@+id/item1"
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/picture_frame"
            />

        <TextView
            android:nextFocusLeft="@+id/item4"
            android:nextFocusRight="@+id/item3"
            android:nextFocusUp="@+id/item2"
            android:nextFocusDown="@+id/item1"
            android:id="@+id/ImagePictureTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:textSize="15dp"

            />

    <Button
        android:nextFocusLeft="@+id/item4"
        android:nextFocusRight="@+id/item3"
        android:nextFocusUp="@+id/item2"
        android:nextFocusDown="@+id/item1"
        android:id="@+id/GoToChatBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/GoToChatText"
        android:layout_below="@id/ImagePictureTextView"/>

<!--    <Button-->
<!--        android:id="@+id/goToToolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/goToToolbar" />-->

    <Button
        android:nextFocusLeft="@+id/item4"
        android:nextFocusRight="@+id/item3"
        android:nextFocusUp="@+id/item2"
        android:nextFocusDown="@+id/item1"
        android:id="@+id/GoToWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/GoToWeather"
        android:layout_below="@id/GoToChatBtn"/>

    </LinearLayout>